--- a/package.json
+++ b/package.json
@@ -7,6 +7,8 @@
     "@testing-library/react": "^11.1.0",
     "@testing-library/user-event": "^12.1.10",
     "axios": "^0.21.0",
+    "dotenv": "^8.2.0",
+    "prop-types": "^15.7.2",
     "react": "^17.0.1",
     "react-autosuggest": "^10.0.3",
     "react-dom": "^17.0.1",
