--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "react-autosuggest": "^10.0.3",
     "react-canvas-js": "^1.0.1",
     "react-dom": "^17.0.1",
+    "react-loadingg": "^1.7.2",
     "react-redux": "^7.2.2",
     "react-router-dom": "^5.2.0",
     "react-scripts": "4.0.0",
